name:                Alchemist
version:             0.1.0.0
synopsis:            Esolang based on Chemical Reaction Networks
homepage:            https://github.com/bforte/alchemist#README.md
license:             BSD3
license-file:        LICENSE
author:              BMO
maintainer:          bforte@pm.me
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable alchemist
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Eval
                     , Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.5
                     , containers
                     , mtl
                     , parsec
                     , random
